--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "assert",
+  "name": "aserta",
   "description": "bash unit testing framework",
-  "scripts": [ "assert.sh" ],
-  "install": "chmod +x assert.sh && install assert.sh ${PREFIX:-/usr/local}/bin/assert"
+  "scripts": [ "aserta" ],
+  "install": "chmod +x aserta && install aserta ${PREFIX:-/usr/local}/bin/aserta"
 }
 
